# whisk2

./: .gitignore  CMakeLists.txt  Dockerfile
doc/: algs.dia  metrics.bnf  taxonomy-hierarchy.dia
include/: whisk.hpp
include/whisk/: driver.hpp  driver_miror.hpp  driver_mirror.hpp  driver_simdag.hpp  metrics.hpp
src/: CMakeLists.txt  driver.cpp  driver_miror.cpp  driver_mirror.cpp  driver_simdag.cpp  main.cpp  metrics.cpp  whisk.cpp
src/simdag/: platform.cpp  platform.hpp  taskgraph.cpp  taskgraph.hpp  workstation.hpp  workstations.cpp  workstations.hpp
